docs/debug/build/crossbeam-utils-c069530a88b122fb/stderr
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:18
  |
1 | pub type Probe = core::sync::atomic::AtomicU128;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #99069 <https://github.com/rust-lang/rust/issues/99069> for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
